[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openabc*"]
namespaces = false

[project]
name = "openabc"
version = "1.0.8"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", 
    "pandas", 
    "mdtraj", 
    "MDAnalysis", 
    "OpenMM", 
	  "networkx",
]

[tool.setuptools]
include-package-data = true



